<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tips">100</string>
    <string name="app_name">炫能</string>
    <string name="app_version">"邦固科技 版本所有 BANDGOOD "%s</string>
     <string name="viewpager_indicator">%1$d/%2$d</string>
    	<!-- 版本更新 -->
	<string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">版本更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗？</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating_xml">正在更新</string>
    <string name="soft_updating_source">正在更新资源</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel_alert">确定取消更新吗？</string>
    <string name="soft_update_check_now">正在检查新版本&#8230;</string>
    <string name="dlg_sdcard_load_err">SD卡空间不足或已卸载，无法下载安装应用</string>
    
    
     <string name="joke_fail_verify">未通过审核原因：%s</string>
     
     
     
     
     <string name="main_title_home">首页</string>
     <string name="main_title_contact">联系</string>
     <string name="main_title_weiqiang">微墙</string>
     <string name="main_title_show">炫能</string>
     <string name="main_title_me">我</string>
     <string name="main_title_count">1</string>
     
     
     
     
     <string name="action_original">原创</string>
     <string name="action_disagree">不通过</string>
     <string name="action_agree">通过</string>
     <string name="action_count">1</string>
     <string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
	<string name="errcode_unknown">发送返回</string>

    <!-- 下拉刷新 -->
    <string name="about_company">欧必了巴网络有限公司</string>
    <string name="pull_down_to_refresh_pull_label">上拉可以刷新</string>
    <string name="pull_to_refresh_header_subtext_label">上次更新：</string>
    <string name="more_check_version_no_sdcard">SD卡未准备好，请确认后再进行下载安装</string>
    <string name="no_more_data">已到最后一页</string>
    <string name="no_data">未找到匹配结果</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在刷新…</string>

    <!-- Xlistview -->
    
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_no_more">没有更多了</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 首页 -->
    <string name="speech_text_begin">请开始说话&#8230;</string>
     <string name="search_result_comm_size">交流厅人数：%1$s人</string>
     
    
    
    
    <!-- 个人中心 -->
    <string name="account_vip">VIP%s</string>
    <string name="account_number">能能号：%s</string>
    <string name="action_add_attention">立即关注</string>
    <string name="action_add_friend">添加好友</string>
    <string name="action_chat">发起会话</string>
    
    
    <!-- 协议  -->
    <string name="xn_protocol_title">炫能软件最终用户\n使用许可协议</string>
    <string name="xn_protocol_content">\t\t炫能 软件最终用户许可协议
重要须知━请认真阅读：本《最终用户许可协议》（以下称《协议》）是您（单一实体）与 炫能之间有关上述炫能软件产品的法律协议。 \n\t\t
本“软件产品”包括计算机软件，并可能包括相关媒体、印刷材料和“联机”或电子文档（“软件产品”）。本“软件产品”还包括对炫能提供给您的原“软件产品”的任何更新和补充资料。
任何与本“软件产品”一同提供给您的并与单独一份最终用户许可证相关的软件产品是根据那份许可协议中的条款而授予您。您一旦安装、复制、下载、访问或以其它方式使用“软件产品”，
即表示您同意接受本《协议》各项条款的约束。如您不同意本《协议》中的条款，请不要安装或使用“软件产品”；但您可将其退回原购买处，并获得全额退款。
软件产品许可证
本“软件产品”受袒护著作权法及国际著作权条约和其它知识产权法和条约的保护。本“软件产品”只许可使用，而不出售。  \n\t\t
1．许可证的授予。本《协议》授予您下列权利：．应用软件。您可在单一一台计算机上和智能终端安装、使用、访问、显示、运行或以其它方 
式互相作用于（“运行”）本“软件产品” （或适用于同一操作系统的任何前版本）的一份副本。运行“软件产品”的计算机的主要用户可以制作另一份副本，仅供在其在安装到公司其他电脑管理注册后的同一项目之用。
．储存／网络用途。您还可以在您公司的其它计算机上运行“软件产品”但仅限于注册时所添之项目，您必须为增加的每个项目获得一份许可证。
．保留权利。未明示授予的一切其它权利均为深圳市邦固科技有限公司所有。  \n\t\t
2．其它权利和限制的说明。 
．试用版本。仅限于试用，如需正式使用，必须注册成为正式版。
．组件的分隔。本“软件产品”是作为单一产品而被授予使用许可的。您不得将 
其组成部分分开在多台计算机上使用。
．商标。本《协议》不授予您有关任何炫能商标或服务商标的任何 
权利。 
．出租。不得出租、租赁或出借本“软件产品”。
．支持服务。深圳市邦固科技有限公司可能为您提供 
与“软件产品”有关的支持服务（“支持服务”）。支持服务的使用受用户手册、“联机”文档和/或其它提供的材料中所述的各项政策和计划的制约。提供给您作为支持服务的一部份的任何附加软件代码
应被视为本“软件产品”的一部分，并须符合本《协议》中的各项条款和条件。至于您提供给深圳市邦固科技有限公司作为支持服务的一部分的技术信息，深圳市邦固科技有限公司可将其用于商业用途，包括产品支持
和开发。深圳市邦固科技咨有限公司在使用这些技术信息时不会以个人形式提及您。
．软件转让。本"软件产品"的第一被许可人不可以对本《协议》及“软件产品”直接或间接向任何用户作转让。
．终止。如您未遵守本《协议》的各项条款和条件，在不损害其它权利的情况 
下，深圳市邦固科技有限公司可终止本《协议》。如此类情况发生，您必须销毁“软件产品”的所有副本及其所有组成部分。  \n\t\t
3．升级版本。如本“软件产品”标明为升级版本，您必须获取深圳市邦固科技有限公司标明为合格使用升级版本的产品的许可证方可使用本“软件产品” 。标明为升级版本的“软件产品”替换和/或补充（也 
可能使无能）使您有资格使用升级版本的基础的产品，您只可根据本《协议》的条款使用所产生的升级产品。如本“软件产品”是您获得许可作为单一产品使用的一套软件程序包中一个组件的升级版本，则本“软件产品”只
可作为该单一产品包的一部分而使用和转让，并且不可将其分开使用在一台以上的计算机上。 \n\t\t
4．著作权。本“软件产品”（包括但不限于本“软件产品”中所含的任何图象、照片、动画、录像、录音、音乐、文字和附加程序）、随附的印刷材料、及本“软件产品”的任何副本的产权和著作权，均由深圳市邦固科技有限
公司拥有。通过使用“软件产品”可访问的内容的一切所有权和知识产权均属于各自内容所有者拥有，并可能受适用著作权或其它知识产权法和条约的保护。 
本《协议》不授予您使用这些内容的权利。如果这份“软件产品”包括只以电子形式提供的文档，您可以打印一份该电子文档。您不可复制本“软件产品”随附的印刷材料。 \n\t\t
5.备份副本。在按照本《协议》安装一份本“软件产品”副本后，您可以保留 
深圳市邦固科技有限公司用以提供给您本“软件产品”的原媒体，仅用于备份或存档之用。如果需要原媒体方可在计算机上使用“软件产品”，您可以复制一份“软件产品”副本仅用于备份或存档之用。除本《协议》中明文规定
外，您不可复制本“软件产品”或随附本“软件产品”的印刷材料。  \n\t\t
如您是在中华人民共和国取得此 炫能 产品，下列有限保证适用于您：
有限责任。 
在适用法律所允许的最大范围内，深圳市邦固科技有限 
公司在任何情况下绝不就因使用或不能使用“软件产品”或因提供或未提供支持服务所发生的任何特殊的、意外的、非直接的或间接的损失（包括，但不限于营业利润损失、营业中断、商业信息的遗失或任何其他金钱上的损失）承
担赔偿责任，即使深圳市邦固科技有限公司事先被告知该损害发生的可能性。不论任何情况，深圳市邦固科技有限公司在本 
《协议》任何条款下所承担的全部责任，以您就“软件产品”实际已付的价款为准。  \n\t\t
但是，如果您已经与深圳市邦固科技有限公司达成支持服务协议，深圳市邦固科技有限公司就支持服务的全部赔偿责任应以该协议条款为准。  \n\t\t
本《协议》受中华人民共和国法律管辖。
如果您对本《协议》有什么问题，请同深圳市邦固科技有限公司 联系，或写信给sz_banggu@qq.com。 \n \n</string>

    <string name="joke_rule">
		\t\t1.奖金分配方式:
		\n\t\t\t\t日排行\n\t\t\t\t\t\t第一名 50元
		\n\t\t\t\t周排行\n\t\t\t\t\t\t第一名 100元
					  \n\t\t\t\t\t\t第二名  50元
		\n\t\t\t\t月排行\n\t\t\t\t\t\t第一名  300元
					  \n\t\t\t\t\t\t第二名  200元
					  \n\t\t\t\t\t\t第三名  100元
		\n\t\t\t\t每周结算一次现金转帐给获奖者或者给用户充值对应金额的话费
		\n\t\t2.采取积分制：按积分高低列出日排行、周排行、月排行名次 从榜单中可以查询用户得奖情况
		\n\t\t3.作品获得积分的计算方法！1分/点赞 、1分/评论、1分/转发、2分/分享！（同个用户转发，分享，评论同条稿件分别记首次分）。
		\n\t\t4.系统自动统计加分！
        
    </string>
    
    <string name="joke_rule_title"> 幽默秀有奖投稿规则</string>

</resources>